version 0.99.2 - XX-MMM-2010
 . [NEW] Actions: Added blocks actions via PLBlocks: CCCallBlock and CCCallBlockN (issue #699)
 . [NEW] Actions: Added CCFollow, and actions that follows a CCNode (issue #738)
 . [NEW] MenuItem: MenuItems supports blocks via PLBlocks (issue #699)
 . [NEW] Texture2D: added support for NPOT textures where available (issue #818)
 . [NEW] Templates: file templates for CCLayer, CCNode, CCSprite (issue #XXX)
 . [NEW] ProfilingTimer: new class to test performance (issue #XXX)
 . [NEW] Xcode: added "build all tests" target (issue #XXX)
 . [FIX] Box2d: GLES-DebugDraw draws non-solid circles as non-solid circles (issue #831)
 . [FIX] EAGLView: swapBuffers doesn't bind the color buffer. It assumes it is already bound (issue #XXX)
 . [FIX] Particles: constants stars with kCC (issue #809)
 . [FIX] Particles: Asserts if start/end size is <0 or >64
 . [FIX] Protocols: CCAnimationProtocol removed. Merged into CCAnimation (issue #XXX)
 . [FIX] Protocols: CCFrameProtocol removed. Merged into CCSprite (issue #XXX)
 . [FIX] Ribbon: fixed memory corruption bug (issue #XXX)
 . [FIX] Ribbon/RenderTexture: use objective-c like ivars (part of issue #733)
 . [FIX] Templates: Improved logic in template installer (issue #XXX)
 . [FIX] Templates: Generates optimized binaries. ARMv7 binaries have thumb-2 enabled (issue #XXX)
 . [FIX] SpriteSheet: Improved doxygen documentation (issue #827)
 . [FIX] SpriteFrameCache: logs warning if frame is not found
 . [FIX] Xcode: uses optimized binary. ARMv7 binary has thumb-2 enabled (issue #XXX)
 . [3RD] Box2d: updated to r88 (issue #XXX)
 
version 0.99.1 - 19-Mar-2010
 . [FIX] Menu: If menu is not visible it doesn't receive touches (issue #88)
 . [FIX] Menu: MenuItemLabel restores the scale property (issue #500)
 . [FIX] SpriteFrameCache: set singleton to nil when it is purged (issue #814)
 . [FIX] Templates: thumb-compilation turned off at project settings (already off in target settings) (issue #772)